@@ -7,6 +7,7 @@ lib/LEOCHARRE/HTML/Rip.pm
 lib/LEOCHARRE/HTML/Text.pm
 t/03_rip.t
 t/04_html2txt.t
+t/05-wget-w32safe-slurpmod.t
 t/99_cleanup.sh
 t/bbc.html
 META.yml                                 Module meta-data (added by MakeMaker)
