@@ -1,3 +1,11 @@
+2009-08-13 14:47  cvs
+
+	* MANIFEST, Makefile.PL, lib/LEOCHARRE/HTML/Text.pm,
+	  t/05-wget-w32safe-slurpmod.t: Made so If you slurp a url on
+	  win32, it works ok. (Submitted).. This is the first time I add
+	  something to work with windows software, but it was submitted. I
+	  almost feel dirty I don't want to think about it.
+
 2009-08-12 17:04  cvs
 
 	* bin/html2txt, lib/LEOCHARRE/HTML/Text.pm: The documentation was
